--- a/style.css
+++ b/style.css
@@ -26,6 +26,12 @@ h1{
     justify-content: center;
     align-items: center;
 }
+.title2 {
+    font-size: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .menu-container{
     height: 80%;
 }
@@ -43,6 +49,11 @@ h1{
 }
 .a1 :nth-child(2){
     writing-mode: vertical-lr;
+}
+.image-menu{
+    height: 150px;
+    width: 150px;
+    opacity: .7;
 }
 .a2 {
     font-size: 4rem;
@@ -165,27 +176,36 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 }
 .title-about{
     text-align: center;
-    font-size: 2rem;
+    font-size: 2.2rem;
 }
 .container-description{
     height: 70%;
-    display: flex;
     width: 30%;
 }
 .description{
     font-size: 2rem;
 }
-.icons-language{
+.container-language{
     height: 70%;
+    width: 50%;
     display: flex;
-    width: 30%;
+    justify-content: space-around;
 }
 .container-about_language{
     display: flex;
     justify-content: space-around;
+    height: 90%;
 }
 .img{
-    height: 100px;
-    width: 100px;
-    
+    height: 120px;
+    width: 120px;
 }
+.img-two{
+    display: flex;
+    align-items: flex-end
+}
+.img-four{
+    display: flex;
+    align-items: flex-end
+}
+
