--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
     box-sizing: border-box;
     font-family: 'Amatic SC', cursive;
 }
-body {background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+body {background: rgb(255,255,255);
+    background: linear-gradient(220deg, rgba(255,255,255,1) 4%, rgba(233,233,233,1) 17%, rgba(218,218,218,1) 28%, rgba(168,168,168,1) 49%, rgba(89,89,89,1) 82%, rgba(47,47,47,1) 100%);
 }
 a {
     font-size: 4rem;
@@ -172,8 +173,7 @@ h1{
 
 .container-about{
     height: 500px;
-    background: rgb(207,217,223);
-    background: linear-gradient(180deg, rgba(207,217,223,0) 0%, rgba(108,108,108,1) 100%);
+    
 }
 .title-about{
     text-align: center;
@@ -220,5 +220,86 @@ h1{
     width: 170px;
     transition-duration: .8s;
     transform: rotate(360deg);
+}
+/* formulario*/
+
+.container-form{
+    height: 99vh;
+    
+
+}
+.title-form{
+    color: rgb(0, 0, 0);
+    text-shadow: 3px 9px 7px rgba(0,0,0,0.83);
+    font-size: 4rem;
+    text-align: end;
+    margin: 0px 60px 0px 0px;
+}
+.formulario{
+    height: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+form{
+    height: 750px;
+    width: 600px;
+    background: rgb(255,255,255);
+    background: linear-gradient(47deg, rgba(255,255,255,0.5396533613445378) 4%, rgba(233,233,233,0.5228466386554622) 17%, rgba(218,218,218,0.5564600840336135) 28%, rgba(168,168,168,0.5536589635854341) 49%, rgba(89,89,89,0.520045518207283) 82%, rgba(47,47,47,0.5340511204481793) 100%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;
+}
+
+textarea{
+    resize: none;
+}
+
+.c-input{
+    height: 70px;
+    width: 70%;
+    margin: 50px 0px;
+}
+    .input1{
+        height: 100%;
+        width: 100%;
+        font-size: 3rem;
+        border-radius: 10px;
+        border: none;
+        outline: none;
+        text-shadow: 3px 9px 7px rgba(0,0,0,0.83);
+    }
+.c-input2{
+    height: 260px;
+    width: 70%;
+}
+.message{
+    height: 220px;
+    width: 100%;
+    font-size: 2.5rem;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    text-shadow: 3px 9px 7px rgba(0,0,0,0.83);
+}
+
+.c-button{
+    height: 80px;
+    width: 170px;
+}
+.button{
+    height: 100%;
+    width: 100%;
+    font-size: 2rem;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    text-shadow: 3px 9px 7px rgba(0,0,0,0.83);
+    cursor: pointer;
+}
+.button:hover{
+    font-size: 2.5rem;
+    height: 120%;
 }
 
