--- a/style.css
+++ b/style.css
@@ -2,19 +2,35 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Amatic SC', cursive;
-}
-body {background: rgb(255,255,255);
-    background: linear-gradient(220deg, rgba(255,255,255,1) 4%, rgba(233,233,233,1) 17%, rgba(218,218,218,1) 28%, rgba(168,168,168,1) 49%, rgba(89,89,89,1) 82%, rgba(47,47,47,1) 100%);
+    font-family: 'Exo 2', sans-serif;
 }
 a {
     font-size: 4rem;
-    color: black;
+    color: rgb(255, 255, 255);
     text-decoration: none;
     text-shadow: 3px 9px 5px rgba(0,0,0,0.83);
+    visibility: visible;
+}
+.home{
+    min-height: 100vh;
+    display: flex;
+    padding: 30px;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.8);
+    position: relative;
 }
 .container {
     height: 100vh;
+    background-color: #8e8e8e;
+    background-image: url(/img/pexels-pixabay-270348.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    z-index: 1;
 }
 h1{
     padding-top: 40px;
@@ -25,6 +41,7 @@ h1{
     justify-content: center;
     align-items: center;
     text-shadow: 3px 9px 5px rgba(0,0,0,0.83);
+    color: whitesmoke;
 }
 .title2 {
     font-size: 5rem;
@@ -32,6 +49,7 @@ h1{
     justify-content: center;
     align-items: center;
     text-shadow: 3px 9px 5px rgba(0,0,0,0.83);
+    color: whitesmoke;
 }
 .menu-container{
     height: 80%;
@@ -39,14 +57,14 @@ h1{
 .a1 {
     height: 60%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding: 0px 50px;
 }
 .a1 :first-child{
     writing-mode: vertical-lr;
     transform: rotate(180deg);
-}   
+}
     .a1 :first-child:hover{
         transform: rotate(270deg);
         transition-duration: .9s;
@@ -57,7 +75,6 @@ h1{
     .a1 :nth-child(3):hover {
         transform: rotate(270deg);
         transition-duration: .9s;
-        
     }
 .image-menu{
     height: 150px;
@@ -75,7 +92,6 @@ h1{
     transform: rotate(360deg);
     transition-duration: .9s;
 }
- 
 /*carrusel de los proyectos*/
 
 .categories__title{
@@ -85,52 +101,51 @@ h1{
     padding-left: 30px;
     padding-bottom: 50px;
     width: 100%;
-  }
-  .carousel{
-      width: 100%;
-      overflow: scroll;
-      padding: 30px;
-      position: relative;
-      overflow: hidden;
-      
-  }
-  .carousel__container{
+}
+.carousel{
+    width: 100%;
+    overflow: scroll;
+    padding: 30px;
+    position: relative;
+    overflow: hidden;
+}
+.carousel__container{
     padding-left: 30px;
-      white-space: nowrap;
-      margin: 70px 0px;
-      padding-bottom: 10px;
-      display: flex;
-      justify-content: space-around;
-  }
-  .carousel-item{
-      background-color: teal;
-      width: 200px;
-      height: 250px;
-      border-radius: 20px;
-      overflow: hidden;
-      margin-right: 27px;
-      display: inline-block;
-      cursor: pointer;
-      transition: 450ms;
-      transform-origin: center left;
-      position: relative;
-  }
-  .carousel-item:hover~.carousel-item {
-      transform: translate3d(100px, 0, 0);
-  }
-  .carousel__container:hover .carousel-item{
-      opacity:0.3;
-  }
-  .carousel__container:hover .carousel-item:hover{
-      transform: scale(1.5);
-      opacity: 1;
-  }
-  .carousel-item__img{
-      width: 200px;
-      height: 250px;
-      object-fit: cover;
-  }
-  .carousel-item__details {
+    white-space: nowrap;
+    margin: 70px 0px;
+    padding-bottom: 10px;
+    display: flex;
+    justify-content: space-around;
+}
+.carousel-item{
+    background-color: teal;
+    width: 200px;
+    height: 250px;
+    border-radius: 20px;
+    overflow: hidden;
+    margin-right: 27px;
+    display: inline-block;
+    cursor: pointer;
+    transition: 450ms;
+    transform-origin: center left;
+    position: relative;
+}
+.carousel-item:hover~.carousel-item {
+    transform: translate3d(100px, 0, 0);
+}
+.carousel__container:hover .carousel-item{
+    opacity:0.3;
+}
+.carousel__container:hover .carousel-item:hover{
+    transform: scale(1.5);
+    opacity: 1;
+}
+.carousel-item__img{
+    width: 200px;
+    height: 250px;
+    object-fit: cover;
+}
+.carousel-item__details {
     align-items: flex-start;
     background: linear-gradient(to top, rgba(0,0,0,0.9) 0%, rgba(0,0,0,0) 100%);
     bottom: 0;
@@ -145,35 +160,40 @@ h1{
     position: absolute;
     right: 0;
     top: 0;
-  
-  }
-  
-  .carousel-item__details--img {
+}
+.carousel-item__details--img {
     width: 20px;
-  }
-  
-  .carousel-item:hover .carousel-item__details {
+}
+
+.carousel-item:hover .carousel-item__details {
     opacity: 1;
-  }
-  
-  .carousel-item__details--title {
+}
+.carousel-item__details--title {
     font-family: 'Muli', sans-serif;
     color: white;
     margin: 5px 0px 0px 0px;
-  }
-  
-  .carousel-item__details--subtitle {
+}
+.carousel-item__details--subtitle {
     font-family: 'Muli', sans-serif;
     color: white;
     font-size: 8px;
     margin: 3px 0px;
-  }
+}
 
 /*sobre mi / about me*/
+.about{
+    min-height: 100vh;
+    display: flex;
+    padding: 30px;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    background: rgb(255,252,250);
+    background: linear-gradient(0deg, rgba(255,252,250,1) 0%, rgba(231,231,231,1) 100%);
 
+}
 .container-about{
     height: 500px;
-    
 }
 .title-about{
     text-align: center;
@@ -181,7 +201,7 @@ h1{
     text-shadow: 3px 9px 7px rgba(0,0,0,0.83);
 }
 .saludo{
-    font-size: 4rem;
+    font-size: 3rem;
     text-shadow: 3px 9px 7px rgba(0,0,0,0.83);
 }
 .container-description{
@@ -190,7 +210,11 @@ h1{
 }
 .description{
     font-size: 2rem;
-    text-shadow: 3px 9px 7px rgba(0,0,0,0.83);
+}
+.linkcv{
+    padding-top: 20px;
+    font-size: 2.6rem;
+    color: black;
 }
 .container-language{
     height: 70%;
@@ -222,11 +246,11 @@ h1{
     transform: rotate(360deg);
 }
 /* formulario*/
-
-.container-form{
-    height: 99vh;
-    
-
+.section-form{
+    background: rgb(255,252,250);
+    background: linear-gradient(187deg, rgba(255,252,250,1) 44%, rgba(224,224,224,1) 60%, rgba(186,186,186,1) 69%, rgba(128,128,128,1) 85%, rgba(62,62,62,1) 100%);
+    min-height: 100vh;
+    padding: 30px;
 }
 .title-form{
     color: rgb(0, 0, 0);
@@ -255,16 +279,16 @@ form{
 textarea{
     resize: none;
 }
-
 .c-input{
     height: 70px;
     width: 70%;
     margin: 50px 0px;
 }
     .input1{
+        color: black;
         height: 100%;
         width: 100%;
-        font-size: 3rem;
+        font-size: 2rem;
         border-radius: 10px;
         border: none;
         outline: none;
@@ -275,22 +299,22 @@ textarea{
     width: 70%;
 }
 .message{
+    color: black;
     height: 220px;
     width: 100%;
-    font-size: 2.5rem;
+    font-size: 2rem;
     border-radius: 10px;
     border: none;
     outline: none;
     text-shadow: 3px 9px 7px rgba(0,0,0,0.83);
 }
-
 .c-button{
     height: 80px;
     width: 170px;
 }
 .button{
-    height: 100%;
-    width: 100%;
+    height: 70px;
+    width: 200px;
     font-size: 2rem;
     border-radius: 10px;
     border: none;
