--- a/style.css
+++ b/style.css
@@ -197,146 +197,70 @@ span{
 }
 .container-about{
     height: 500px;
-}
-.title-about{
-    text-align: center;
-    font-size: 2.2rem;
-    text-shadow: 3px 9px 7px rgba(0,0,0,0.83);
+    display: flex;
+    justify-content: space-around;
+    height: 90%;
 }
 .saludo{
+    color: cornflowerblue;
     font-size: 3rem;
-    text-shadow: 3px 9px 7px rgba(0,0,0,0.83);
+    text-align: end;
+    text-shadow: 5px 5px 2px rgba(150, 150, 150, 1);
 }
 .container-description{
     height: 70%;
     width: 40%;
 }
+
 .description{
     font-size: 2rem;
+    color: black;
 }
 .linkcv{
     padding-top: 20px;
     font-size: 2.6rem;
     color: black;
 }
-.container-language{
-    height: 70%;
-    width: 50%;
-    display: flex;
-    justify-content: space-around;
-}
-.container-about_language{
-    display: flex;
-    justify-content: space-around;
-    height: 90%;
-}
-.img{
-    height: 120px;
-    width: 120px;
-}
-.img-two{
-    display: flex;
-    align-items: flex-end
-}
-.img-four{
-    display: flex;
-    align-items: flex-end
-}
-.img:hover{
-    height: 170px;
-    width: 170px;
-    transition-duration: .8s;
-    transform: rotate(360deg);
-}
-/* formulario*/
-.section-form{
-    background: rgb(255,252,250);
-    background: linear-gradient(187deg, rgba(255,252,250,1) 44%, rgba(224,224,224,1) 60%, rgba(186,186,186,1) 69%, rgba(128,128,128,1) 85%, rgba(62,62,62,1) 100%);
-    min-height: 100vh;
-    padding: 30px;
-}
-.title-form{
-    color: rgb(0, 0, 0);
-    text-shadow: 3px 9px 7px rgba(0,0,0,0.83);
-    font-size: 4rem;
-    text-align: end;
-    margin: 0px 60px 0px 0px;
-}
-.formulario{
-    height: 90%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-form{
-    height: 750px;
-    width: 600px;
-    background: rgb(255,255,255);
-    background: linear-gradient(47deg, rgba(255,255,255,0.5396533613445378) 4%, rgba(233,233,233,0.5228466386554622) 17%, rgba(218,218,218,0.5564600840336135) 28%, rgba(168,168,168,0.5536589635854341) 49%, rgba(89,89,89,0.520045518207283) 82%, rgba(47,47,47,0.5340511204481793) 100%);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 20px;
-}
-
-textarea{
-    resize: none;
-}
-.c-input{
-    height: 70px;
-    width: 70%;
-    margin: 50px 0px;
-}
-    .input1{
-        color: black;
-        height: 100%;
-        width: 100%;
-        font-size: 2rem;
-        border-radius: 10px;
-        border: none;
-        outline: none;
-        text-shadow: 3px 9px 7px rgba(0,0,0,0.83);
-    }
-.c-input2{
-    height: 260px;
-    width: 70%;
-}
-.message{
-    color: black;
-    height: 220px;
-    width: 100%;
-    font-size: 2rem;
-    border-radius: 10px;
-    border: none;
-    outline: none;
-    text-shadow: 3px 9px 7px rgba(0,0,0,0.83);
-}
-.c-button{
-    height: 80px;
-    width: 170px;
-}
-.button{
-    height: 70px;
-    width: 200px;
-    font-size: 2rem;
-    border-radius: 10px;
-    border: none;
-    outline: none;
-    text-shadow: 3px 9px 7px rgba(0,0,0,0.83);
-    cursor: pointer;
-}
-.button:hover{
-    font-size: 2.5rem;
-    height: 120%;
-}
+/*My skills*/
 .skills{
     min-height: 100vh;
-    display: flex;
     padding: 30px;
-    justify-content: center;
-    align-items: center;
-    position: relative;
     background: rgb(255,252,250);
     background: linear-gradient(0deg, rgba(255,252,250,1) 0%, rgba(231,231,231,1) 100%);
 }
-
+.title__skills{
+    color: cornflowerblue;
+    font-size: 4rem;
+    text-align: center;
+    text-shadow: 5px 5px 2px rgba(150, 150, 150, 1);
+    padding-bottom: 40px;
+}
+.container-language{
+    height: 80vh;
+    display: flex;
+    justify-content: space-around;
+}
+.fa-html5 {
+    font-size: 70px;
+    color: rgb(255, 51, 0);
+}
+.fa-css3-alt {
+    font-size: 70px;
+    color: skyblue;
+}
+.fa-js-square {
+    font-size: 70px;
+    color: gold;
+}
+.fa-sass {
+    font-size: 70px;
+    color: palevioletred
+}
+.fa-bootstrap {
+    font-size: 70px;
+    color: rebeccapurple;
+}
+.fa-react {
+    font-size: 70px;
+    color: cyan;
+}
