--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     font-family: 'Nunito Sans', sans-serif;
 }
-a {
+.container a {
     font-size: 4rem;
     color: rgb(255, 255, 255);
     text-decoration: none;
@@ -210,7 +210,7 @@ span{
 }
 /*contacto*/
 .contact{
-    min-height: 90vh;
+    min-height: 70vh;
     padding: 60px;
     background: rgb(255,252,250);
     background: linear-gradient(190deg, rgba(255,252,250,1) 50%, rgba(195,195,195,1) 100%);
@@ -256,4 +256,22 @@ span{
     font-size: 1.5rem;
     color: black;
     text-shadow: 5px 5px 2px rgba(150, 150, 150, 1);
+}
+.container-footer {
+    display: flex;
+    justify-content: center;
+    align-content: flex-end;
+    height:70px;
+    width: 100%;
+    
+}
+.title-footer {
+    font-size: 1rem;
+    padding-top: 22px;
+}
+.enlace-home{
+    font-size: 1rem;
+    text-decoration: none;
+    color: cornflowerblue;
+
 }
