--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
 .container {
     height: 100vh;
     background-color: #8e8e8e;
-    background-image: url(/img/pexels-pixabay-270348.jpg);
+    background-image: url(/img/home.jpg);
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
